[package]
name = "cst816s-device-driver"
version = "0.1.0"
edition = "2021"
keywords = [
    "embedded-hal",
    "touch",
    "device-driver",
    "embedded",
    "driver",
    "cst816s",
]

[dependencies]
device-driver = { version = "1.0.2", default-features = false, features = [
    "dsl",
] }
defmt = { version = "0.3", optional = true }
embedded-hal = "1"

[features]
defmt-03 = ["dep:defmt", "device-driver/defmt-03", "embedded-hal/defmt-03"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
futures-test = "0.3.31"
