[package]
name = "touch-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.11.0"
gc9a01a_driver = "1.0.0"
waveshare-rp2040-touch-lcd-1-28 = { path = "../../../rp-hal-boards/boards/waveshare-rp2040-touch-lcd-1-28/" }
device-driver = { version = "1.0.0", default-features = false }
cst816s-device-driver = { path = "../cst816s-driver" }
