[package]
edition = "2024"
name = "esp32s3"
version = "0.1.0"

[[bin]]
name = "esp32s3"
path = "./src/bin/main.rs"

[dependencies]
device-driver = { version = "1.0.7", default-features = false }
critical-section = "1.2.0"
cst816s-device-driver = { path = "../../driver" }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
heapless = "0.8.0"
log = { version = "0.4.27" }
mipidsi = "0.9.0"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
