[package]
name = "rp2040-example"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }
fugit = "0.3.7"
heapless = "0.8.0"
# nb = "1.1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
solderparty-rp2040-stamp = "0.7.0"
device-driver = { version = "1.0.7", default-features = false }
cst816s-device-driver = { path = "../../driver" }
mipidsi = "0.9.0"
